--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@react-three/drei": "^9.88.2",
@@ -17,7 +18,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "three": "^0.157.0"
+    "three": "^0.157.0",
+    "vercel": "^32.4.1",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
